@@ -215,10 +215,10 @@ omxSelectRows <- function(x, selector) {
     if(nrow(x) != ncol(selector)) {
         stop("selector must have one column for each row of x")
     }
-    retval = x[selector != 0,]
+    retval <- x[as.logical(selector), ]
     
     if(is.vector(retval)) {                 # One remaining row = vector = column
-        retval = t(as.matrix(retval))      # so we'll need to transpose it
+        retval <- t(as.matrix(retval))      # so we'll need to transpose it
     }
     
     return(retval)
@@ -233,7 +233,7 @@ omxSelectCols <- function(x, selector) {
         stop("selector must have one column for each column of x")
     }
     
-    return(as.matrix(x[,selector != 0]))
+    return(as.matrix(x[, as.logical(selector)]))
     
 }
 
@@ -245,7 +245,7 @@ omxSelectRowsAndCols <- function(x, selector) {
     if(nrow(x) != ncol(selector) || ncol(x) != ncol(selector)) {
         stop("selector must have one column for each row and column of x")
     }
-    
-    return(as.matrix(x[selector != 0,selector != 0]))
+    selector <- as.logical(selector)
+    return(as.matrix(x[selector, selector]))
     
 }
