@@ -43,6 +43,7 @@ myRegDataCov <- matrix(
  
 SimpleDataCov <- myRegDataCov[c("x","y"),c("x","y")]	 
 myRegDataMeans <- c(2.582, 0.054, 2.574, 4.061)
+names(myRegDataMeans) <- c("w","x","y","z")
 
 SimpleDataMeans <- myRegDataMeans[c(2,3)]
 	
