@@ -87,7 +87,7 @@ univSatModel1m <- mxModel("univSat1m",
         observed=var(testData), 
         type="cov", 
         numObs=1000, 
-        means=mean(testData)
+        means=colMeans(testData)
     ),
     type="RAM"
 )
@@ -202,7 +202,7 @@ univSatModel3m <- mxModel("univSat3m",
         observed=var(testData), 
         type="cov", 
         numObs=1000,
-        means=mean(testData) 
+        means=colMeans(testData) 
     ),
     mxMLObjective(
         covariance="expCov", 
