@@ -66,6 +66,7 @@ Our first step to running this model is to include the data to be analyzed. The 
                                 c("x1","x2","x3","x4","x5","x6")]
 
     myFADataMeans <- c(2.988, 3.011, 2.986, 3.053, 3.016, 3.010, 2.955, 2.956, 2.967)
+    names(myFADataMeans) <- c("x1", "x2", "x3", "x4", "x5", "x6", "y1", "y2", "y3")
 
     oneFactorMeans <- myFADataMeans[1:6]
 
