@@ -27,7 +27,8 @@ myLongitudinalDataCov<-matrix(
 		c("x1","x2","x3","x4","x5"),c("x1","x2","x3","x4","x5"))
 	)
 
-myLongitudinalDataMean<-c(9.864, 11.812, 13.612, 15.317, 17.178)
+myLongitudinalDataMean <- c(9.864, 11.812, 13.612, 15.317, 17.178)
+names(myLongitudinalDataMean) <- c("x1","x2","x3","x4","x5")
 
 growthCurveModel <- mxModel("Linear Growth Curve Model, Path Specification", 
     type="RAM",
